Added Timestamp message for Get and GetList methods. Cleaned code
