# pkg/note_v1/api.swagger.json
@@ -142,6 +142,19 @@
     }
   },
   "definitions": {
+    "apinote_v1Timestamp": {
+      "type": "object",
+      "properties": {
+        "created_at": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updated_at": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
     "note_v1CreateRequest": {
       "type": "object",
       "properties": {
@@ -167,6 +180,12 @@
           "items": {
             "$ref": "#/definitions/note_v1Note"
           }
+        },
+        "timestamp_list": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/apinote_v1Timestamp"
+          }
         }
       }
     },
@@ -175,6 +194,9 @@
       "properties": {
         "note": {
           "$ref": "#/definitions/note_v1Note"
+        },
+        "timestamp": {
+          "$ref": "#/definitions/apinote_v1Timestamp"
         }
       }
     },
