# pkg/note_v1/note.pb.validate.go
@@ -170,6 +170,145 @@ var _ interface {
 
 var _Note_Author_Pattern = regexp.MustCompile("([A-Za-z]+$)")
 
+// Validate checks the field values on Timestamp with the rules defined in the
+// proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *Timestamp) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on Timestamp with the rules defined in
+// the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in TimestampMultiError, or nil
+// if none found.
+func (m *Timestamp) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *Timestamp) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if m.GetCreatedAt() == nil {
+		err := TimestampValidationError{
+			field:  "CreatedAt",
+			reason: "value is required",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if all {
+		switch v := interface{}(m.GetUpdatedAt()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, TimestampValidationError{
+					field:  "UpdatedAt",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, TimestampValidationError{
+					field:  "UpdatedAt",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetUpdatedAt()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return TimestampValidationError{
+				field:  "UpdatedAt",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if len(errors) > 0 {
+		return TimestampMultiError(errors)
+	}
+
+	return nil
+}
+
+// TimestampMultiError is an error wrapping multiple validation errors returned
+// by Timestamp.ValidateAll() if the designated constraints aren't met.
+type TimestampMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m TimestampMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m TimestampMultiError) AllErrors() []error { return m }
+
+// TimestampValidationError is the validation error returned by
+// Timestamp.Validate if the designated constraints aren't met.
+type TimestampValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e TimestampValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e TimestampValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e TimestampValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e TimestampValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e TimestampValidationError) ErrorName() string { return "TimestampValidationError" }
+
+// Error satisfies the builtin error interface
+func (e TimestampValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sTimestamp.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = TimestampValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = TimestampValidationError{}
+
 // Validate checks the field values on CreateRequest with the rules defined in
 // the proto definition for this message. If any rules are violated, the first
 // error encountered is returned, or nil if there are no violations.
@@ -553,6 +692,35 @@ func (m *GetResponse) validate(all bool) error {
 		}
 	}
 
+	if all {
+		switch v := interface{}(m.GetTimestamp()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, GetResponseValidationError{
+					field:  "Timestamp",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, GetResponseValidationError{
+					field:  "Timestamp",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetTimestamp()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return GetResponseValidationError{
+				field:  "Timestamp",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
 	if len(errors) > 0 {
 		return GetResponseMultiError(errors)
 	}
@@ -678,6 +846,40 @@ func (m *GetListResponse) validate(all bool) error {
 			if err := v.Validate(); err != nil {
 				return GetListResponseValidationError{
 					field:  fmt.Sprintf("NoteList[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	for idx, item := range m.GetTimestampList() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, GetListResponseValidationError{
+						field:  fmt.Sprintf("TimestampList[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, GetListResponseValidationError{
+						field:  fmt.Sprintf("TimestampList[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return GetListResponseValidationError{
+					field:  fmt.Sprintf("TimestampList[%v]", idx),
 					reason: "embedded message failed validation",
 					cause:  err,
 				}
